--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
 *.o
 *.log
 *~
-builda*
-compare
 *scratch
 x.c
 libXp*
-geomtest
 geomtest.dat
 Makefile
 tomroot.h
-compO*
+
 termout*
+
 bA*
+compO*
+
+builda*
+compare
 callsolve_cg
+row_to_col
+geomtest
