--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,11 @@ compare
 callsolve_cg*
 row_to_col
 geomtest
-
+buildrow.c_STATIC
+comp_I_CircOrbit01
+comp_O_CircOrbit01
+compare.c_STATIC
+compare_nostatic_WISPRI
+compare_nostatic_WISPRO
+scaling.of.lambda.txt
+test.pro
